// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jdl - JDLImporter import when not parsing applications should export entity Country 1`] = `
{
  "applications": "*",
  "dto": "no",
  "embedded": false,
  "entityTableName": "country",
  "fields": [
    {
      "fieldName": "name",
      "fieldType": "String",
    },
  ],
  "fluentMethods": true,
  "jpaMetamodelFiltering": false,
  "microserviceName": "mymicroservice",
  "name": "Country",
  "pagination": "no",
  "readOnly": false,
  "relationships": [
    {
      "otherEntityField": "region",
      "otherEntityName": "region",
      "otherEntityRelationshipName": "country",
      "relationshipName": "area",
      "relationshipType": "one-to-many",
    },
    {
      "otherEntityName": "location",
      "otherEntityRelationshipName": "country",
      "relationshipName": "location",
      "relationshipType": "many-to-one",
    },
  ],
  "service": "no",
  "skipServer": true,
}
`;

exports[`jdl - JDLImporter import when not parsing applications should export entity Department 1`] = `
{
  "applications": "*",
  "dto": "no",
  "embedded": true,
  "entityTableName": "department",
  "fields": [
    {
      "fieldName": "name",
      "fieldType": "String",
      "fieldValidateRules": [
        "required",
      ],
    },
    {
      "fieldName": "description",
      "fieldType": "byte[]",
      "fieldTypeBlobContent": "text",
    },
    {
      "fieldName": "advertisement",
      "fieldType": "byte[]",
      "fieldTypeBlobContent": "any",
    },
    {
      "fieldName": "logo",
      "fieldType": "byte[]",
      "fieldTypeBlobContent": "image",
    },
  ],
  "fluentMethods": true,
  "jpaMetamodelFiltering": false,
  "microserviceName": "mymicroservice",
  "name": "Department",
  "pagination": "no",
  "readOnly": false,
  "relationships": [
    {
      "options": {
        "id": "42",
      },
      "otherEntityName": "location",
      "ownerSide": true,
      "relationshipName": "location",
      "relationshipType": "one-to-one",
    },
    {
      "javadoc": "A relationship",
      "otherEntityName": "employee",
      "otherEntityRelationshipName": "department",
      "relationshipName": "employee",
      "relationshipType": "one-to-many",
    },
    {
      "otherEntityName": "jobHistory",
      "otherEntityRelationshipName": "department",
      "ownerSide": false,
      "relationshipName": "jobHistory",
      "relationshipType": "many-to-many",
    },
  ],
  "service": "no",
}
`;

exports[`jdl - JDLImporter import when not parsing applications should export entity Employee 1`] = `
{
  "applications": "*",
  "dto": "mapstruct",
  "embedded": false,
  "entityTableName": "employee",
  "fields": [
    {
      "fieldName": "firstName",
      "fieldType": "String",
      "javadoc": "The firstname attribute.",
    },
    {
      "fieldName": "lastName",
      "fieldType": "String",
    },
    {
      "fieldName": "email",
      "fieldType": "String",
    },
    {
      "fieldName": "phoneNumber",
      "fieldType": "String",
    },
    {
      "fieldName": "hireDate",
      "fieldType": "ZonedDateTime",
    },
    {
      "fieldName": "salary",
      "fieldType": "Long",
    },
    {
      "fieldName": "commissionPct",
      "fieldType": "Long",
    },
  ],
  "fluentMethods": true,
  "javadoc": "The Employee entity.\\nSecond line in javadoc.",
  "jpaMetamodelFiltering": false,
  "microserviceName": "mymicroservice",
  "name": "Employee",
  "pagination": "infinite-scroll",
  "readOnly": false,
  "relationships": [
    {
      "otherEntityName": "job",
      "otherEntityRelationshipName": "emp",
      "relationshipName": "job",
      "relationshipType": "one-to-many",
    },
    {
      "otherEntityField": "login",
      "otherEntityName": "user",
      "relationshipName": "user",
      "relationshipType": "many-to-one",
    },
    {
      "otherEntityField": "lastName",
      "otherEntityName": "employee",
      "relationshipName": "manager",
      "relationshipType": "many-to-one",
    },
    {
      "javadoc": "Another side of the same relationship,",
      "otherEntityName": "department",
      "otherEntityRelationshipName": "employee",
      "relationshipName": "department",
      "relationshipType": "many-to-one",
    },
    {
      "otherEntityName": "jobHistory",
      "otherEntityRelationshipName": "emp",
      "ownerSide": false,
      "relationshipName": "jobHistory",
      "relationshipType": "many-to-many",
    },
  ],
  "searchEngine": "elasticsearch",
  "service": "serviceClass",
}
`;

exports[`jdl - JDLImporter import when not parsing applications should export entity Job 1`] = `
{
  "applications": "*",
  "dto": "no",
  "embedded": false,
  "entityTableName": "job",
  "fields": [
    {
      "fieldName": "title",
      "fieldType": "String",
      "fieldValidateRules": [
        "minlength",
        "maxlength",
      ],
      "fieldValidateRulesMaxlength": "25",
      "fieldValidateRulesMinlength": "5",
    },
    {
      "fieldName": "type",
      "fieldType": "JobType",
      "fieldValues": "BOSS,SLAVE",
    },
    {
      "fieldName": "minSalary",
      "fieldType": "Long",
    },
    {
      "fieldName": "maxSalary",
      "fieldType": "Long",
    },
  ],
  "fluentMethods": true,
  "jpaMetamodelFiltering": false,
  "microserviceName": "mymicroservice",
  "name": "Job",
  "pagination": "pagination",
  "readOnly": false,
  "relationships": [
    {
      "otherEntityField": "title",
      "otherEntityName": "task",
      "otherEntityRelationshipName": "linkedJob",
      "ownerSide": true,
      "relationshipName": "chore",
      "relationshipType": "many-to-many",
    },
    {
      "otherEntityField": "employee",
      "otherEntityName": "employee",
      "otherEntityRelationshipName": "job",
      "relationshipName": "emp",
      "relationshipType": "many-to-one",
    },
    {
      "otherEntityName": "jobHistory",
      "otherEntityRelationshipName": "job",
      "ownerSide": false,
      "relationshipName": "history",
      "relationshipType": "many-to-many",
    },
  ],
  "service": "no",
}
`;

exports[`jdl - JDLImporter import when not parsing applications should export entity JobHistory 1`] = `
{
  "applications": "*",
  "dto": "no",
  "embedded": false,
  "entityTableName": "job_history",
  "fields": [
    {
      "fieldName": "startDate",
      "fieldType": "ZonedDateTime",
    },
    {
      "fieldName": "endDate",
      "fieldType": "ZonedDateTime",
    },
    {
      "fieldName": "language",
      "fieldType": "Language",
      "fieldValues": "FRENCH,ENGLISH,SPANISH",
    },
    {
      "fieldName": "positionDuration",
      "fieldType": "Duration",
    },
  ],
  "fluentMethods": true,
  "javadoc": "JobHistory comment.",
  "jpaMetamodelFiltering": false,
  "microserviceName": "mymicroservice",
  "name": "JobHistory",
  "pagination": "infinite-scroll",
  "readOnly": true,
  "relationships": [
    {
      "otherEntityName": "department",
      "otherEntityRelationshipName": "jobHistory",
      "ownerSide": true,
      "relationshipName": "department",
      "relationshipType": "many-to-many",
    },
    {
      "otherEntityName": "job",
      "otherEntityRelationshipName": "history",
      "ownerSide": true,
      "relationshipName": "job",
      "relationshipType": "many-to-many",
    },
    {
      "otherEntityField": "employee",
      "otherEntityName": "employee",
      "otherEntityRelationshipName": "jobHistory",
      "ownerSide": true,
      "relationshipName": "emp",
      "relationshipType": "many-to-many",
    },
  ],
  "service": "no",
}
`;

exports[`jdl - JDLImporter import when not parsing applications should export entity Location 1`] = `
{
  "applications": "*",
  "dto": "no",
  "embedded": false,
  "entityTableName": "location",
  "fields": [
    {
      "fieldName": "streetAddress",
      "fieldType": "String",
    },
    {
      "fieldName": "postalCode",
      "fieldType": "String",
    },
    {
      "fieldName": "city",
      "fieldType": "String",
    },
    {
      "fieldName": "stateProvince",
      "fieldType": "String",
    },
  ],
  "fluentMethods": true,
  "jpaMetamodelFiltering": false,
  "microserviceName": "mymicroservice",
  "name": "Location",
  "pagination": "no",
  "readOnly": false,
  "relationships": [
    {
      "otherEntityName": "country",
      "otherEntityRelationshipName": "location",
      "relationshipName": "country",
      "relationshipType": "one-to-many",
    },
    {
      "options": {
        "id": true,
      },
      "otherEntityName": "department",
      "otherEntityRelationshipName": "location",
      "ownerSide": false,
      "relationshipName": "department",
      "relationshipType": "one-to-one",
    },
  ],
  "service": "no",
}
`;

exports[`jdl - JDLImporter import when not parsing applications should export entity Region 1`] = `
{
  "applications": "*",
  "dto": "no",
  "embedded": false,
  "entityTableName": "region",
  "fields": [
    {
      "fieldName": "name",
      "fieldType": "String",
    },
  ],
  "fluentMethods": true,
  "jpaMetamodelFiltering": false,
  "microserviceName": "mymicroservice",
  "name": "Region",
  "pagination": "no",
  "readOnly": false,
  "relationships": [
    {
      "otherEntityName": "country",
      "otherEntityRelationshipName": "area",
      "relationshipName": "country",
      "relationshipType": "many-to-one",
    },
  ],
  "service": "no",
}
`;

exports[`jdl - JDLImporter import when not parsing applications should export entity Task 1`] = `
{
  "applications": "*",
  "dto": "no",
  "embedded": false,
  "entityTableName": "task",
  "fields": [
    {
      "fieldName": "title",
      "fieldType": "String",
    },
    {
      "fieldName": "description",
      "fieldType": "String",
    },
  ],
  "fluentMethods": true,
  "jpaMetamodelFiltering": false,
  "microserviceName": "mymicroservice",
  "name": "Task",
  "pagination": "no",
  "readOnly": false,
  "relationships": [
    {
      "otherEntityField": "jobTitle",
      "otherEntityName": "job",
      "otherEntityRelationshipName": "chore",
      "ownerSide": false,
      "relationshipName": "linkedJob",
      "relationshipType": "many-to-many",
    },
  ],
  "service": "no",
}
`;

exports[`jdl - JDLImporter import when not parsing applications should return the final state 1`] = `
{
  "exportedApplications": [],
  "exportedApplicationsWithEntities": {},
  "exportedDeployments": [],
  "exportedEntities": [
    JSONEntity {
      "applications": "*",
      "dto": "no",
      "embedded": false,
      "entityTableName": "country",
      "fields": [
        {
          "fieldName": "name",
          "fieldType": "String",
        },
      ],
      "fluentMethods": true,
      "javadoc": "",
      "jpaMetamodelFiltering": false,
      "microserviceName": "mymicroservice",
      "name": "Country",
      "pagination": "no",
      "readOnly": false,
      "relationships": [
        {
          "otherEntityField": "region",
          "otherEntityName": "region",
          "otherEntityRelationshipName": "country",
          "relationshipName": "area",
          "relationshipType": "one-to-many",
        },
        {
          "otherEntityName": "location",
          "otherEntityRelationshipName": "country",
          "relationshipName": "location",
          "relationshipType": "many-to-one",
        },
      ],
      "service": "no",
      "skipServer": true,
    },
    JSONEntity {
      "applications": "*",
      "dto": "no",
      "embedded": true,
      "entityTableName": "department",
      "fields": [
        {
          "fieldName": "name",
          "fieldType": "String",
          "fieldValidateRules": [
            "required",
          ],
        },
        {
          "fieldName": "description",
          "fieldType": "byte[]",
          "fieldTypeBlobContent": "text",
        },
        {
          "fieldName": "advertisement",
          "fieldType": "byte[]",
          "fieldTypeBlobContent": "any",
        },
        {
          "fieldName": "logo",
          "fieldType": "byte[]",
          "fieldTypeBlobContent": "image",
        },
      ],
      "fluentMethods": true,
      "javadoc": "",
      "jpaMetamodelFiltering": false,
      "microserviceName": "mymicroservice",
      "name": "Department",
      "pagination": "no",
      "readOnly": false,
      "relationships": [
        {
          "options": {
            "id": "42",
          },
          "otherEntityName": "location",
          "ownerSide": true,
          "relationshipName": "location",
          "relationshipType": "one-to-one",
        },
        {
          "javadoc": "A relationship",
          "otherEntityName": "employee",
          "otherEntityRelationshipName": "department",
          "relationshipName": "employee",
          "relationshipType": "one-to-many",
        },
        {
          "otherEntityName": "jobHistory",
          "otherEntityRelationshipName": "department",
          "ownerSide": false,
          "relationshipName": "jobHistory",
          "relationshipType": "many-to-many",
        },
      ],
      "service": "no",
    },
    JSONEntity {
      "applications": "*",
      "dto": "mapstruct",
      "embedded": false,
      "entityTableName": "employee",
      "fields": [
        {
          "fieldName": "firstName",
          "fieldType": "String",
          "javadoc": "The firstname attribute.",
        },
        {
          "fieldName": "lastName",
          "fieldType": "String",
        },
        {
          "fieldName": "email",
          "fieldType": "String",
        },
        {
          "fieldName": "phoneNumber",
          "fieldType": "String",
        },
        {
          "fieldName": "hireDate",
          "fieldType": "ZonedDateTime",
        },
        {
          "fieldName": "salary",
          "fieldType": "Long",
        },
        {
          "fieldName": "commissionPct",
          "fieldType": "Long",
        },
      ],
      "fluentMethods": true,
      "javadoc": "The Employee entity.\\nSecond line in javadoc.",
      "jpaMetamodelFiltering": false,
      "microserviceName": "mymicroservice",
      "name": "Employee",
      "pagination": "infinite-scroll",
      "readOnly": false,
      "relationships": [
        {
          "otherEntityName": "job",
          "otherEntityRelationshipName": "emp",
          "relationshipName": "job",
          "relationshipType": "one-to-many",
        },
        {
          "otherEntityField": "login",
          "otherEntityName": "user",
          "relationshipName": "user",
          "relationshipType": "many-to-one",
        },
        {
          "otherEntityField": "lastName",
          "otherEntityName": "employee",
          "relationshipName": "manager",
          "relationshipType": "many-to-one",
        },
        {
          "javadoc": "Another side of the same relationship,",
          "otherEntityName": "department",
          "otherEntityRelationshipName": "employee",
          "relationshipName": "department",
          "relationshipType": "many-to-one",
        },
        {
          "otherEntityName": "jobHistory",
          "otherEntityRelationshipName": "emp",
          "ownerSide": false,
          "relationshipName": "jobHistory",
          "relationshipType": "many-to-many",
        },
      ],
      "searchEngine": "elasticsearch",
      "service": "serviceClass",
    },
    JSONEntity {
      "applications": "*",
      "dto": "no",
      "embedded": false,
      "entityTableName": "job",
      "fields": [
        {
          "fieldName": "title",
          "fieldType": "String",
          "fieldValidateRules": [
            "minlength",
            "maxlength",
          ],
          "fieldValidateRulesMaxlength": "25",
          "fieldValidateRulesMinlength": "5",
        },
        {
          "fieldName": "type",
          "fieldType": "JobType",
          "fieldValues": "BOSS,SLAVE",
        },
        {
          "fieldName": "minSalary",
          "fieldType": "Long",
        },
        {
          "fieldName": "maxSalary",
          "fieldType": "Long",
        },
      ],
      "fluentMethods": true,
      "javadoc": "",
      "jpaMetamodelFiltering": false,
      "microserviceName": "mymicroservice",
      "name": "Job",
      "pagination": "pagination",
      "readOnly": false,
      "relationships": [
        {
          "otherEntityField": "title",
          "otherEntityName": "task",
          "otherEntityRelationshipName": "linkedJob",
          "ownerSide": true,
          "relationshipName": "chore",
          "relationshipType": "many-to-many",
        },
        {
          "otherEntityField": "employee",
          "otherEntityName": "employee",
          "otherEntityRelationshipName": "job",
          "relationshipName": "emp",
          "relationshipType": "many-to-one",
        },
        {
          "otherEntityName": "jobHistory",
          "otherEntityRelationshipName": "job",
          "ownerSide": false,
          "relationshipName": "history",
          "relationshipType": "many-to-many",
        },
      ],
      "service": "no",
    },
    JSONEntity {
      "applications": "*",
      "dto": "no",
      "embedded": false,
      "entityTableName": "job_history",
      "fields": [
        {
          "fieldName": "startDate",
          "fieldType": "ZonedDateTime",
        },
        {
          "fieldName": "endDate",
          "fieldType": "ZonedDateTime",
        },
        {
          "fieldName": "language",
          "fieldType": "Language",
          "fieldValues": "FRENCH,ENGLISH,SPANISH",
        },
        {
          "fieldName": "positionDuration",
          "fieldType": "Duration",
        },
      ],
      "fluentMethods": true,
      "javadoc": "JobHistory comment.",
      "jpaMetamodelFiltering": false,
      "microserviceName": "mymicroservice",
      "name": "JobHistory",
      "pagination": "infinite-scroll",
      "readOnly": true,
      "relationships": [
        {
          "otherEntityName": "department",
          "otherEntityRelationshipName": "jobHistory",
          "ownerSide": true,
          "relationshipName": "department",
          "relationshipType": "many-to-many",
        },
        {
          "otherEntityName": "job",
          "otherEntityRelationshipName": "history",
          "ownerSide": true,
          "relationshipName": "job",
          "relationshipType": "many-to-many",
        },
        {
          "otherEntityField": "employee",
          "otherEntityName": "employee",
          "otherEntityRelationshipName": "jobHistory",
          "ownerSide": true,
          "relationshipName": "emp",
          "relationshipType": "many-to-many",
        },
      ],
      "service": "no",
    },
    JSONEntity {
      "applications": "*",
      "dto": "no",
      "embedded": false,
      "entityTableName": "location",
      "fields": [
        {
          "fieldName": "streetAddress",
          "fieldType": "String",
        },
        {
          "fieldName": "postalCode",
          "fieldType": "String",
        },
        {
          "fieldName": "city",
          "fieldType": "String",
        },
        {
          "fieldName": "stateProvince",
          "fieldType": "String",
        },
      ],
      "fluentMethods": true,
      "javadoc": "",
      "jpaMetamodelFiltering": false,
      "microserviceName": "mymicroservice",
      "name": "Location",
      "pagination": "no",
      "readOnly": false,
      "relationships": [
        {
          "otherEntityName": "country",
          "otherEntityRelationshipName": "location",
          "relationshipName": "country",
          "relationshipType": "one-to-many",
        },
        {
          "options": {
            "id": true,
          },
          "otherEntityName": "department",
          "otherEntityRelationshipName": "location",
          "ownerSide": false,
          "relationshipName": "department",
          "relationshipType": "one-to-one",
        },
      ],
      "service": "no",
    },
    JSONEntity {
      "applications": "*",
      "dto": "no",
      "embedded": false,
      "entityTableName": "region",
      "fields": [
        {
          "fieldName": "name",
          "fieldType": "String",
        },
      ],
      "fluentMethods": true,
      "javadoc": "",
      "jpaMetamodelFiltering": false,
      "microserviceName": "mymicroservice",
      "name": "Region",
      "pagination": "no",
      "readOnly": false,
      "relationships": [
        {
          "otherEntityName": "country",
          "otherEntityRelationshipName": "area",
          "relationshipName": "country",
          "relationshipType": "many-to-one",
        },
      ],
      "service": "no",
    },
    JSONEntity {
      "applications": "*",
      "dto": "no",
      "embedded": false,
      "entityTableName": "task",
      "fields": [
        {
          "fieldName": "title",
          "fieldType": "String",
        },
        {
          "fieldName": "description",
          "fieldType": "String",
        },
      ],
      "fluentMethods": true,
      "javadoc": "",
      "jpaMetamodelFiltering": false,
      "microserviceName": "mymicroservice",
      "name": "Task",
      "pagination": "no",
      "readOnly": false,
      "relationships": [
        {
          "otherEntityField": "jobTitle",
          "otherEntityName": "job",
          "otherEntityRelationshipName": "chore",
          "ownerSide": false,
          "relationshipName": "linkedJob",
          "relationshipType": "many-to-many",
        },
      ],
      "service": "no",
    },
  ],
}
`;

exports[`jdl - JDLImporter import when parsing JDL applications and deployment config should export the application & deployment contents 1`] = `
[
  {
    "entities": [],
    "generator-jhipster": {
      "applicationType": "monolith",
      "authenticationType": "jwt",
      "baseName": "tata",
      "buildTool": "maven",
      "cacheProvider": "ehcache",
      "clientFramework": "angular",
      "clientPackageManager": "npm",
      "clientTheme": "none",
      "clientThemeVariant": "",
      "databaseType": "sql",
      "devDatabaseType": "h2Disk",
      "dtoSuffix": "DTO",
      "enableGradleEnterprise": false,
      "enableHibernateCache": true,
      "enableSwaggerCodegen": false,
      "enableTranslation": true,
      "entitySuffix": "",
      "gradleEnterpriseHost": "",
      "jhiPrefix": "jhi",
      "languages": [],
      "messageBroker": "no",
      "nativeLanguage": "en",
      "packageFolder": "com/mathieu/tata",
      "packageName": "com.mathieu.tata",
      "prodDatabaseType": "postgresql",
      "reactive": false,
      "searchEngine": "no",
      "serverPort": 8080,
      "serviceDiscoveryType": "no",
      "skipUserManagement": false,
      "testFrameworks": [],
      "websocket": "no",
      "withAdminUi": true,
    },
  },
  {
    "entities": [],
    "generator-jhipster": {
      "applicationType": "gateway",
      "authenticationType": "jwt",
      "baseName": "titi",
      "buildTool": "maven",
      "cacheProvider": "no",
      "clientFramework": "angular",
      "clientPackageManager": "npm",
      "clientTheme": "none",
      "clientThemeVariant": "",
      "databaseType": "sql",
      "devDatabaseType": "h2Disk",
      "dtoSuffix": "DTO",
      "enableGradleEnterprise": false,
      "enableHibernateCache": false,
      "enableSwaggerCodegen": false,
      "enableTranslation": true,
      "entitySuffix": "",
      "gradleEnterpriseHost": "",
      "jhiPrefix": "jhi",
      "languages": [],
      "messageBroker": "no",
      "nativeLanguage": "en",
      "packageFolder": "com/mathieu/titi",
      "packageName": "com.mathieu.titi",
      "prodDatabaseType": "postgresql",
      "reactive": true,
      "searchEngine": "no",
      "serverPort": 8080,
      "serviceDiscoveryType": "eureka",
      "skipUserManagement": false,
      "testFrameworks": [],
      "websocket": "no",
      "withAdminUi": true,
    },
  },
  {
    "entities": [],
    "generator-jhipster": {
      "applicationType": "microservice",
      "authenticationType": "jwt",
      "baseName": "toto",
      "buildTool": "maven",
      "cacheProvider": "hazelcast",
      "clientFramework": "no",
      "clientPackageManager": "npm",
      "databaseType": "sql",
      "devDatabaseType": "h2Disk",
      "dtoSuffix": "DTO",
      "enableGradleEnterprise": false,
      "enableHibernateCache": true,
      "enableSwaggerCodegen": false,
      "enableTranslation": true,
      "entitySuffix": "",
      "gradleEnterpriseHost": "",
      "jhiPrefix": "jhi",
      "languages": [],
      "messageBroker": "no",
      "nativeLanguage": "en",
      "packageFolder": "com/mathieu/toto",
      "packageName": "com.mathieu.toto",
      "prodDatabaseType": "postgresql",
      "reactive": false,
      "searchEngine": "no",
      "serverPort": 8081,
      "serviceDiscoveryType": "eureka",
      "skipClient": true,
      "skipUserManagement": true,
      "testFrameworks": [],
      "websocket": "no",
      "withAdminUi": false,
    },
  },
  {
    "entities": [],
    "generator-jhipster": {
      "applicationType": "monolith",
      "authenticationType": "jwt",
      "baseName": "tutu",
      "buildTool": "maven",
      "cacheProvider": "ehcache",
      "clientFramework": "angular",
      "clientPackageManager": "npm",
      "clientTheme": "none",
      "clientThemeVariant": "",
      "databaseType": "sql",
      "devDatabaseType": "h2Disk",
      "dtoSuffix": "DTO",
      "enableGradleEnterprise": false,
      "enableHibernateCache": true,
      "enableSwaggerCodegen": false,
      "enableTranslation": true,
      "entitySuffix": "",
      "gradleEnterpriseHost": "",
      "jhiPrefix": "jhi",
      "languages": [],
      "messageBroker": "no",
      "nativeLanguage": "en",
      "packageFolder": "com/mathieu/tutu",
      "packageName": "com.mathieu.tutu",
      "prodDatabaseType": "postgresql",
      "reactive": false,
      "searchEngine": "no",
      "serverPort": 8080,
      "serviceDiscoveryType": "no",
      "skipUserManagement": false,
      "testFrameworks": [],
      "websocket": "no",
      "withAdminUi": true,
    },
  },
  {
    "generator-jhipster": {
      "appsFolders": [
        "tata",
        "titi",
      ],
      "clusteredDbApps": [],
      "deploymentType": "docker-compose",
      "directoryPath": "../",
      "dockerRepositoryName": "test",
      "gatewayType": "SpringCloudGateway",
      "monitoring": "no",
      "serviceDiscoveryType": "eureka",
    },
  },
]
`;

exports[`jdl - JDLImporter import when parsing JDL applications and deployment config with a realistic sample should export the application & deployment contents 1`] = `
[
  {
    "entities": [
      "Customer",
      "Product",
      "ProductCategory",
      "ProductOrder",
      "OrderItem",
      "Invoice",
      "Shipment",
      "Notification",
    ],
    "generator-jhipster": {
      "applicationType": "gateway",
      "authenticationType": "jwt",
      "baseName": "store",
      "buildTool": "gradle",
      "cacheProvider": "no",
      "clientFramework": "react",
      "clientPackageManager": "npm",
      "clientTheme": "none",
      "clientThemeVariant": "",
      "databaseType": "sql",
      "devDatabaseType": "h2Disk",
      "dtoSuffix": "DTO",
      "enableGradleEnterprise": false,
      "enableHibernateCache": false,
      "enableSwaggerCodegen": false,
      "enableTranslation": true,
      "entitySuffix": "",
      "gradleEnterpriseHost": "",
      "jhiPrefix": "jhi",
      "languages": [],
      "messageBroker": "no",
      "nativeLanguage": "en",
      "packageFolder": "com/jhipster/demo/store",
      "packageName": "com.jhipster.demo.store",
      "prodDatabaseType": "mysql",
      "reactive": true,
      "searchEngine": "no",
      "serverPort": 8080,
      "serviceDiscoveryType": "no",
      "skipUserManagement": false,
      "testFrameworks": [
        "cypress",
      ],
      "websocket": "no",
      "withAdminUi": true,
    },
  },
  {
    "entities": [
      "Product",
      "ProductCategory",
      "ProductOrder",
      "OrderItem",
    ],
    "generator-jhipster": {
      "applicationType": "microservice",
      "authenticationType": "jwt",
      "baseName": "product",
      "buildTool": "gradle",
      "cacheProvider": "hazelcast",
      "clientFramework": "no",
      "clientPackageManager": "npm",
      "databaseType": "sql",
      "devDatabaseType": "h2Disk",
      "dtoSuffix": "DTO",
      "enableGradleEnterprise": false,
      "enableHibernateCache": true,
      "enableSwaggerCodegen": false,
      "enableTranslation": true,
      "entitySuffix": "",
      "gradleEnterpriseHost": "",
      "jhiPrefix": "jhi",
      "languages": [],
      "messageBroker": "no",
      "nativeLanguage": "en",
      "packageFolder": "com/jhipster/demo/product",
      "packageName": "com.jhipster.demo.product",
      "prodDatabaseType": "mysql",
      "reactive": false,
      "searchEngine": "no",
      "serverPort": "8081",
      "serviceDiscoveryType": "no",
      "skipClient": true,
      "skipUserManagement": true,
      "testFrameworks": [],
      "websocket": "no",
      "withAdminUi": false,
    },
  },
  {
    "entities": [
      "Invoice",
      "Shipment",
    ],
    "generator-jhipster": {
      "applicationType": "microservice",
      "authenticationType": "jwt",
      "baseName": "invoice",
      "buildTool": "gradle",
      "cacheProvider": "hazelcast",
      "clientFramework": "no",
      "clientPackageManager": "npm",
      "databaseType": "sql",
      "devDatabaseType": "h2Disk",
      "dtoSuffix": "DTO",
      "enableGradleEnterprise": false,
      "enableHibernateCache": true,
      "enableSwaggerCodegen": false,
      "enableTranslation": true,
      "entitySuffix": "",
      "gradleEnterpriseHost": "",
      "jhiPrefix": "jhi",
      "languages": [],
      "messageBroker": "no",
      "nativeLanguage": "en",
      "packageFolder": "com/jhipster/demo/invoice",
      "packageName": "com.jhipster.demo.invoice",
      "prodDatabaseType": "mysql",
      "reactive": false,
      "searchEngine": "no",
      "serverPort": "8082",
      "serviceDiscoveryType": "no",
      "skipClient": true,
      "skipUserManagement": true,
      "testFrameworks": [],
      "websocket": "no",
      "withAdminUi": false,
    },
  },
  {
    "entities": [
      "Notification",
    ],
    "generator-jhipster": {
      "applicationType": "microservice",
      "authenticationType": "jwt",
      "baseName": "notification",
      "buildTool": "gradle",
      "cacheProvider": "no",
      "clientFramework": "no",
      "clientPackageManager": "npm",
      "databaseType": "mongodb",
      "devDatabaseType": "mongodb",
      "dtoSuffix": "DTO",
      "enableGradleEnterprise": false,
      "enableHibernateCache": false,
      "enableSwaggerCodegen": false,
      "enableTranslation": true,
      "entitySuffix": "",
      "gradleEnterpriseHost": "",
      "jhiPrefix": "jhi",
      "languages": [],
      "messageBroker": "no",
      "nativeLanguage": "en",
      "packageFolder": "com/jhipster/demo/notification",
      "packageName": "com.jhipster.demo.notification",
      "prodDatabaseType": "mongodb",
      "reactive": false,
      "searchEngine": "no",
      "serverPort": "8083",
      "serviceDiscoveryType": "no",
      "skipClient": true,
      "skipUserManagement": true,
      "testFrameworks": [],
      "websocket": "no",
      "withAdminUi": false,
    },
  },
  {
    "generator-jhipster": {
      "appsFolders": [
        "store",
        "invoice",
        "notification",
        "product",
      ],
      "clusteredDbApps": [],
      "deploymentType": "docker-compose",
      "directoryPath": "../",
      "dockerRepositoryName": "deepu105",
      "gatewayType": "SpringCloudGateway",
      "monitoring": "no",
      "serviceDiscoveryType": "no",
    },
  },
  {
    "generator-jhipster": {
      "appsFolders": [
        "store",
        "invoice",
        "notification",
        "product",
      ],
      "clusteredDbApps": [],
      "deploymentType": "kubernetes",
      "directoryPath": "../",
      "dockerPushCommand": "docker push",
      "dockerRepositoryName": "deepu105",
      "ingressDomain": "",
      "istio": false,
      "kubernetesNamespace": "default",
      "kubernetesServiceType": "LoadBalancer",
      "kubernetesStorageClassName": "",
      "kubernetesUseDynamicStorage": false,
      "monitoring": "no",
      "serviceDiscoveryType": "no",
    },
  },
]
`;

exports[`jdl - JDLImporter import when parsing JDL applications and exporting them should export the application contents 1`] = `
[
  {
    "entities": [],
    "generator-jhipster": {
      "applicationType": "monolith",
      "authenticationType": "jwt",
      "baseName": "tata",
      "buildTool": "maven",
      "cacheProvider": "ehcache",
      "clientFramework": "angular",
      "clientPackageManager": "npm",
      "clientTheme": "none",
      "clientThemeVariant": "",
      "databaseType": "sql",
      "devDatabaseType": "h2Disk",
      "dtoSuffix": "DTO",
      "enableGradleEnterprise": false,
      "enableHibernateCache": true,
      "enableSwaggerCodegen": false,
      "enableTranslation": true,
      "entitySuffix": "",
      "gradleEnterpriseHost": "",
      "jhiPrefix": "jhi",
      "languages": [],
      "messageBroker": "no",
      "nativeLanguage": "en",
      "packageFolder": "com/mathieu/tata",
      "packageName": "com.mathieu.tata",
      "prodDatabaseType": "postgresql",
      "reactive": false,
      "searchEngine": "no",
      "serverPort": 8080,
      "serviceDiscoveryType": "no",
      "skipUserManagement": false,
      "testFrameworks": [],
      "websocket": "no",
      "withAdminUi": true,
    },
  },
  {
    "entities": [],
    "generator-jhipster": {
      "applicationType": "gateway",
      "authenticationType": "jwt",
      "baseName": "titi",
      "buildTool": "maven",
      "cacheProvider": "no",
      "clientFramework": "angular",
      "clientPackageManager": "npm",
      "clientTheme": "none",
      "clientThemeVariant": "",
      "databaseType": "sql",
      "devDatabaseType": "h2Disk",
      "dtoSuffix": "DTO",
      "enableGradleEnterprise": false,
      "enableHibernateCache": false,
      "enableSwaggerCodegen": false,
      "enableTranslation": true,
      "entitySuffix": "",
      "gradleEnterpriseHost": "",
      "jhiPrefix": "jhi",
      "languages": [],
      "messageBroker": "no",
      "nativeLanguage": "en",
      "packageFolder": "com/mathieu/titi",
      "packageName": "com.mathieu.titi",
      "prodDatabaseType": "postgresql",
      "reactive": true,
      "searchEngine": "no",
      "serverPort": 8080,
      "serviceDiscoveryType": "eureka",
      "skipUserManagement": false,
      "testFrameworks": [],
      "websocket": "no",
      "withAdminUi": true,
    },
  },
  {
    "entities": [],
    "generator-jhipster": {
      "applicationType": "microservice",
      "authenticationType": "jwt",
      "baseName": "toto",
      "buildTool": "maven",
      "cacheProvider": "hazelcast",
      "clientFramework": "no",
      "clientPackageManager": "npm",
      "databaseType": "sql",
      "devDatabaseType": "h2Disk",
      "dtoSuffix": "DTO",
      "enableGradleEnterprise": false,
      "enableHibernateCache": true,
      "enableSwaggerCodegen": false,
      "enableTranslation": true,
      "entitySuffix": "",
      "gradleEnterpriseHost": "",
      "jhiPrefix": "jhi",
      "languages": [],
      "messageBroker": "no",
      "nativeLanguage": "en",
      "packageFolder": "com/mathieu/toto",
      "packageName": "com.mathieu.toto",
      "prodDatabaseType": "postgresql",
      "reactive": false,
      "searchEngine": "no",
      "serverPort": 8081,
      "serviceDiscoveryType": "eureka",
      "skipClient": true,
      "skipUserManagement": true,
      "testFrameworks": [],
      "websocket": "no",
      "withAdminUi": false,
    },
  },
  {
    "entities": [],
    "generator-jhipster": {
      "applicationType": "monolith",
      "authenticationType": "jwt",
      "baseName": "tutu",
      "buildTool": "maven",
      "cacheProvider": "ehcache",
      "clientFramework": "angular",
      "clientPackageManager": "npm",
      "clientTheme": "none",
      "clientThemeVariant": "",
      "databaseType": "sql",
      "devDatabaseType": "h2Disk",
      "dtoSuffix": "DTO",
      "enableGradleEnterprise": false,
      "enableHibernateCache": true,
      "enableSwaggerCodegen": false,
      "enableTranslation": true,
      "entitySuffix": "",
      "gradleEnterpriseHost": "",
      "jhiPrefix": "jhi",
      "languages": [],
      "messageBroker": "no",
      "nativeLanguage": "en",
      "packageFolder": "com/mathieu/tutu",
      "packageName": "com.mathieu.tutu",
      "prodDatabaseType": "postgresql",
      "reactive": false,
      "searchEngine": "no",
      "serverPort": 8080,
      "serviceDiscoveryType": "no",
      "skipUserManagement": false,
      "testFrameworks": [],
      "websocket": "no",
      "withAdminUi": true,
    },
  },
]
`;

exports[`jdl - JDLImporter import when parsing deployment config should export the deployment contents 1`] = `
[
  {
    "generator-jhipster": {
      "appsFolders": [
        "tata",
        "titi",
      ],
      "clusteredDbApps": [],
      "deploymentType": "docker-compose",
      "directoryPath": "../",
      "dockerRepositoryName": "test",
      "gatewayType": "SpringCloudGateway",
      "monitoring": "no",
      "serviceDiscoveryType": "eureka",
    },
  },
  {
    "generator-jhipster": {
      "appsFolders": [
        "tata",
        "titi",
      ],
      "clusteredDbApps": [],
      "deploymentType": "kubernetes",
      "directoryPath": "../",
      "dockerPushCommand": "docker push",
      "dockerRepositoryName": "test",
      "ingressDomain": "",
      "istio": false,
      "kubernetesNamespace": "default",
      "kubernetesServiceType": "LoadBalancer",
      "kubernetesStorageClassName": "KubernetesStorageClassName",
      "kubernetesUseDynamicStorage": false,
      "monitoring": "no",
      "serviceDiscoveryType": "eureka",
    },
  },
  {
    "generator-jhipster": {
      "appsFolders": [
        "tata",
        "titi",
      ],
      "clusteredDbApps": [],
      "deploymentType": "openshift",
      "directoryPath": "../",
      "dockerPushCommand": "docker push",
      "dockerRepositoryName": "test",
      "monitoring": "no",
      "openshiftNamespace": "default",
      "registryReplicas": 2,
      "serviceDiscoveryType": "eureka",
      "storageType": "ephemeral",
    },
  },
]
`;

exports[`jdl - JDLImporter import when parsing multiple JDL files with applications and entities should export myFirstApp applications 1`] = `
{
  "entities": [
    "A",
    "B",
    "E",
    "F",
  ],
  "generator-jhipster": {
    "applicationType": "monolith",
    "authenticationType": "jwt",
    "baseName": "myFirstApp",
    "buildTool": "maven",
    "cacheProvider": "ehcache",
    "clientFramework": "angular",
    "clientPackageManager": "npm",
    "clientTheme": "yeti",
    "clientThemeVariant": "primary",
    "databaseType": "sql",
    "devDatabaseType": "h2Disk",
    "dtoSuffix": "DTO",
    "enableGradleEnterprise": false,
    "enableHibernateCache": true,
    "enableSwaggerCodegen": false,
    "enableTranslation": true,
    "entitySuffix": "",
    "gradleEnterpriseHost": "",
    "jhiPrefix": "jhi",
    "languages": [],
    "messageBroker": "no",
    "nativeLanguage": "en",
    "packageFolder": "com/mycompany/myfirstapp",
    "packageName": "com.mycompany.myfirstapp",
    "prodDatabaseType": "postgresql",
    "reactive": false,
    "searchEngine": "no",
    "serverPort": 8080,
    "serviceDiscoveryType": "no",
    "skipUserManagement": false,
    "testFrameworks": [],
    "websocket": "no",
    "withAdminUi": true,
  },
}
`;

exports[`jdl - JDLImporter import when parsing multiple JDL files with applications and entities should export mySecondApp applications 1`] = `
{
  "entities": [
    "E",
  ],
  "generator-jhipster": {
    "applicationType": "microservice",
    "authenticationType": "jwt",
    "baseName": "mySecondApp",
    "buildTool": "maven",
    "cacheProvider": "hazelcast",
    "clientFramework": "no",
    "clientPackageManager": "npm",
    "databaseType": "sql",
    "devDatabaseType": "h2Disk",
    "dtoSuffix": "DTO",
    "enableGradleEnterprise": false,
    "enableHibernateCache": true,
    "enableSwaggerCodegen": false,
    "enableTranslation": true,
    "entitySuffix": "",
    "gradleEnterpriseHost": "",
    "jhiPrefix": "jhi",
    "languages": [],
    "messageBroker": "no",
    "nativeLanguage": "en",
    "packageFolder": "com/mycompany/myapp",
    "packageName": "com.mycompany.myapp",
    "prodDatabaseType": "postgresql",
    "reactive": false,
    "searchEngine": "no",
    "serverPort": "8091",
    "serviceDiscoveryType": "eureka",
    "skipClient": true,
    "skipUserManagement": true,
    "testFrameworks": [],
    "websocket": "no",
    "withAdminUi": false,
  },
}
`;

exports[`jdl - JDLImporter import when parsing multiple JDL files with applications and entities should export myThirdApp applications 1`] = `
{
  "entities": [
    "F",
  ],
  "generator-jhipster": {
    "applicationType": "microservice",
    "authenticationType": "jwt",
    "baseName": "myThirdApp",
    "buildTool": "maven",
    "cacheProvider": "hazelcast",
    "clientFramework": "no",
    "clientPackageManager": "npm",
    "databaseType": "sql",
    "devDatabaseType": "h2Disk",
    "dtoSuffix": "DTO",
    "enableGradleEnterprise": false,
    "enableHibernateCache": true,
    "enableSwaggerCodegen": false,
    "enableTranslation": true,
    "entitySuffix": "",
    "gradleEnterpriseHost": "",
    "jhiPrefix": "jhi",
    "languages": [],
    "messageBroker": "no",
    "nativeLanguage": "en",
    "packageFolder": "com/mycompany/myapp",
    "packageName": "com.mycompany.myapp",
    "prodDatabaseType": "postgresql",
    "reactive": false,
    "searchEngine": "no",
    "serverPort": "8092",
    "serviceDiscoveryType": "eureka",
    "skipClient": true,
    "skipUserManagement": true,
    "testFrameworks": [],
    "websocket": "no",
    "withAdminUi": false,
  },
}
`;

exports[`jdl - JDLImporter import when parsing multiple JDL files with applications and entities should export the entities for myFirstApp 1`] = `
{
  "applications": [
    "myFirstApp",
  ],
  "dto": "no",
  "embedded": false,
  "entityTableName": "a",
  "fields": [],
  "fluentMethods": true,
  "jpaMetamodelFiltering": false,
  "name": "A",
  "pagination": "no",
  "readOnly": false,
  "relationships": [],
  "service": "no",
}
`;

exports[`jdl - JDLImporter import when parsing multiple JDL files with applications and entities should export the entities for myFirstApp 2`] = `
{
  "applications": [
    "myFirstApp",
  ],
  "dto": "no",
  "embedded": false,
  "entityTableName": "b",
  "fields": [],
  "fluentMethods": true,
  "jpaMetamodelFiltering": false,
  "name": "B",
  "pagination": "no",
  "readOnly": false,
  "relationships": [],
  "service": "no",
}
`;

exports[`jdl - JDLImporter import when parsing multiple JDL files with applications and entities should export the entities for myFirstApp 3`] = `
{
  "applications": [
    "myFirstApp",
    "mySecondApp",
  ],
  "dto": "no",
  "embedded": false,
  "entityTableName": "e",
  "fields": [],
  "fluentMethods": true,
  "jpaMetamodelFiltering": false,
  "microserviceName": "mySecondApp",
  "name": "E",
  "pagination": "no",
  "readOnly": false,
  "relationships": [],
  "service": "no",
}
`;

exports[`jdl - JDLImporter import when parsing multiple JDL files with applications and entities should export the entities for myFirstApp 4`] = `
{
  "applications": [
    "myFirstApp",
    "myThirdApp",
  ],
  "dto": "no",
  "embedded": false,
  "entityTableName": "f",
  "fields": [],
  "fluentMethods": true,
  "jpaMetamodelFiltering": false,
  "name": "F",
  "pagination": "no",
  "readOnly": false,
  "relationships": [],
  "service": "no",
}
`;

exports[`jdl - JDLImporter import when parsing multiple JDL files with applications and entities should export the entities for mySecondApp 1`] = `
{
  "applications": [
    "myFirstApp",
    "mySecondApp",
  ],
  "dto": "no",
  "embedded": false,
  "entityTableName": "e",
  "fields": [],
  "fluentMethods": true,
  "jpaMetamodelFiltering": false,
  "microserviceName": "mySecondApp",
  "name": "E",
  "pagination": "no",
  "readOnly": false,
  "relationships": [],
  "service": "no",
}
`;

exports[`jdl - JDLImporter import when parsing multiple JDL files with applications and entities should export the entities for myThirdApp 1`] = `
{
  "applications": [
    "myFirstApp",
    "myThirdApp",
  ],
  "dto": "no",
  "embedded": false,
  "entityTableName": "f",
  "fields": [],
  "fluentMethods": true,
  "jpaMetamodelFiltering": false,
  "name": "F",
  "pagination": "no",
  "readOnly": false,
  "relationships": [],
  "service": "no",
}
`;

exports[`jdl - JDLImporter import when passing the unidirectionalRelationships option when parsing one JDL application and entities should return the corresponding exportedApplicationsWithEntities 1`] = `
[
  JSONEntity {
    "applications": [
      "jhipster",
    ],
    "dto": "no",
    "embedded": false,
    "entityTableName": "a",
    "fields": [],
    "fluentMethods": true,
    "javadoc": undefined,
    "jpaMetamodelFiltering": false,
    "name": "A",
    "pagination": "no",
    "readOnly": false,
    "relationships": [
      {
        "otherEntityName": "b",
        "ownerSide": true,
        "relationshipName": "oneToOneB",
        "relationshipType": "one-to-one",
        "unidirectional": true,
      },
      {
        "otherEntityName": "b",
        "otherEntityRelationshipName": "biOneToOneA",
        "ownerSide": true,
        "relationshipName": "biOneToOneB",
        "relationshipType": "one-to-one",
        "unidirectional": false,
      },
      {
        "otherEntityName": "b",
        "relationshipName": "oneToManyB",
        "relationshipType": "one-to-many",
        "unidirectional": true,
      },
      {
        "otherEntityName": "b",
        "otherEntityRelationshipName": "biOneToManyA",
        "relationshipName": "biOneToManyB",
        "relationshipType": "one-to-many",
        "unidirectional": false,
      },
      {
        "otherEntityName": "b",
        "relationshipName": "manyToOneB",
        "relationshipType": "many-to-one",
        "unidirectional": true,
      },
      {
        "otherEntityName": "b",
        "otherEntityRelationshipName": "biManyToOneA",
        "relationshipName": "biManyToOneB",
        "relationshipType": "many-to-one",
        "unidirectional": false,
      },
      {
        "otherEntityName": "b",
        "ownerSide": true,
        "relationshipName": "manyToManyB",
        "relationshipType": "many-to-many",
        "unidirectional": true,
      },
      {
        "otherEntityName": "b",
        "otherEntityRelationshipName": "biManyToManyA",
        "ownerSide": true,
        "relationshipName": "biManyToManyB",
        "relationshipType": "many-to-many",
        "unidirectional": false,
      },
    ],
    "service": "no",
  },
  JSONEntity {
    "applications": [
      "jhipster",
    ],
    "dto": "no",
    "embedded": false,
    "entityTableName": "b",
    "fields": [],
    "fluentMethods": true,
    "javadoc": undefined,
    "jpaMetamodelFiltering": false,
    "name": "B",
    "pagination": "no",
    "readOnly": false,
    "relationships": [
      {
        "otherEntityName": "a",
        "otherEntityRelationshipName": "biOneToOneB",
        "ownerSide": false,
        "relationshipName": "biOneToOneA",
        "relationshipType": "one-to-one",
      },
      {
        "otherEntityName": "a",
        "otherEntityRelationshipName": "biOneToManyB",
        "relationshipName": "biOneToManyA",
        "relationshipType": "many-to-one",
      },
      {
        "otherEntityName": "a",
        "otherEntityRelationshipName": "biManyToOneB",
        "relationshipName": "biManyToOneA",
        "relationshipType": "one-to-many",
      },
      {
        "otherEntityName": "a",
        "otherEntityRelationshipName": "biManyToManyB",
        "ownerSide": false,
        "relationshipName": "biManyToManyA",
        "relationshipType": "many-to-many",
      },
    ],
    "service": "no",
  },
]
`;
